Now builds custom Java Runtime
Saves ~300MB of space