@@ -1,20 +1,12 @@
+# THIS DOCKERFILE IS NOT KEPT UP TO DATE - IT EXISTS AS A BACKUP. USE `linux.Dockerfile` INSTEAD.
+
 # escape=`
 FROM lacledeslan/steamcmd:linux as DOWNLOADER
 
 RUN curl -sSL "https://launcher.mojang.com/v1/objects/a16d67e5807f57fc4e550299cf20226194497dc2/server.jar" -o /output/minecraft-server.jar &&`
     echo "a16d67e5807f57fc4e550299cf20226194497dc2 /output/minecraft-server.jar" | sha1sum -c -;
 
-FROM openjdk:18-slim as BUILDER
-
-COPY --chown=Minecraft:root --from=DOWNLOADER /output/minecraft-server.jar /output/minecraft-server.jar
-
-# Build list of Java dependencies, exclude java.base.* as final runtime will always include java.base.
-RUN jdeps --multi-release 17 --ignore-missing-deps --list-deps /output/minecraft-server.jar | grep -v "java.base" | sed -z 's/\n/,/g;s/,$/\n/' | tr -d " \t\n\r" > /output/deps.info
-
-# Build custom Java runtime from list of Java dependencies.
-RUN jlink --no-header-files --no-man-pages --compress=1 --strip-java-debug-attributes --add-modules $(cat /output/deps.info),jdk.zipfs --output /output/jre
-
-FROM debian:bullseye-slim
+FROM openjdk:18-slim
 
 ARG BUILDNODE=unspecified
 ARG SOURCE_COMMIT=unspecified
@@ -43,10 +35,6 @@ RUN useradd --home /app --gid root --system Minecraft &&`
     chown Minecraft:root -R /app;
 
 COPY --chown=Minecraft:root --from=DOWNLOADER /output/minecraft-server.jar /app/minecraft-server.jar
-
-COPY --chown=Minecraft:root --from=BUILDER /output/jre /app/jre
-
-ENV PATH "/app/jre/bin/:$PATH"
 
 COPY --chown=Minecraft:root ./dist/all /app
 
